--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,18 +10,19 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI,
+  font-family: Archivo, -apple-system, BlinkMacSystemFont, Segoe UI,
   Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
   /* background-color: linear-gradient(359.96deg, #292559 54.15%, #352C70 92.15%) !important; */
-  background: #ffffff;
+  background: #FBFAFA;
   color: #503F45;
+  font-weight: 500;
   scroll-behaviour: smooth;
 }
 
 h1, p, span {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI,
+  font-family: Archivo, -apple-system, BlinkMacSystemFont, Segoe UI,
   Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
@@ -30,6 +31,31 @@ h1, p, span {
 .luminous {
   background-image: url('/top-bg.png');
   background-size: cover;
+}
+
+.linear-main-color {
+  background: linear-gradient(90.28deg, #E45174 4.77%, #DB8B07 99.77%);
+}
+
+.card-drop-shadow {
+  filter: drop-shadow(0px 12px 10px rgba(194, 30, 79, 0.15));
+}
+
+.title-shadow {
+  text-shadow: 1px 5px 6px rgba(0, 0, 0, 0.25);
+}
+
+.image-shadow {
+  width: 95%;
+  height: 120px;
+  background: rgba(218, 41, 73, 0.30);
+  filter: blur(8px);
+  border-radius: 20px;
+  margin-top: -112px;
+}
+
+.filter-difference {
+  mix-blend-mode: difference;
 }
 
 a {
@@ -256,7 +282,7 @@ h3 {
 @media (max-width: 768px) {
   html,
   body {
-    background: linear-gradient(359.96deg, #292559 54.15%, #352C70 92.15%) !important;;
+    background: #FBFAFA;
   }
   .grid-container {  
     display: flex;
